[package]
name = "pseudoregalia-asr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/PARTYMANX/asr", branch = "thps34-changes",features = ["derive", "unreal", "integer-vars", "float-vars"] }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
watch = "0.2.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
